# iex-parser

./: .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  package_structuring_idea.txt  pyproject.toml  setup.cfg
docs/: conf.py  functions.rst  index.rst  market_data.rst  requirements.txt  setup.py  symbols.txt  unsupported_os.rst  usage.rst
docs/_build/doctrees/: api.doctree  environment.pickle  functions.doctree  iex_format.doctree  index.doctree  unsupported_os.doctree  usage.doctree
docs/_build/html/: .buildinfo  functions.html  genindex.html  iex_format.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  unsupported_os.html  usage.html
docs/_build/html/_modules/: iex_parser.html  index.html
docs/_build/html/_modules/iex_parser/: download.html
docs/_build/html/_sources/: iex_format.rst.txt  index.rst.txt  unsupported_os.rst.txt  usage.rst.txt
iex_cppparser/: __init__.py  compile_cpp.py  download.py  logger.py  test_dependencies.py
iex_cppparser/cpp/: decode_messages.cpp  decode_messages.h  iex_parser.cpp  iex_parser_all_threaded.cpp  iex_parser_split.cpp  iex_parser_threaded.cpp  logger.cpp
iex_parser/: __init__.py  download.py  download_and_parse.py  download_iex_pcaps.py  iex_parser.out  logger.sh  which_bash.py
iex_parser/cpp/: iex_parser_all_threaded.cpp  iex_parser_split.out  logger.h  main.cpp
src/: README.md  download_parallel.py
src/iex_parser/: args.txt  download_and_parse.py  iex_parser_all_threaded.out  iex_parser_split.cpp  iex_parser_threaded.out
src/iex_parser.egg-info/: PKG-INFO  SOURCES.txt
src/package_name.egg-info/: PKG-INFO  SOURCES.txt
tests/: symbols.txt  test_dependencies.py
tests/expected_output/: test_prl.csv  test_trd.csv
