[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "iex-parser"
version = "0.3.3"
description = "A package with a C++ module"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []
requires-python = ">=3.7"

[tool.hatchling.build-config]
include = [
    "iex_parser/*",
]



