[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "iex-parser"
version = "0.3.4"
description = "A package with a C++ module"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tqdm >= 4.62.3",
    "requests >= 2.25.1",
]
requires-python = ">=3.7"
