[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "iex-cppparser"
version = "0.0.1"
description = "A downloader and parser for IEX DEEP historical data using C++ backend."
readme = "README.md"
authors = [
    { name = "Karthik Vasu", email = "karthikvasu09@gmail.com" },
    { name = "Venkata Sai Bavisetty", email = "vb8@illinois.edu" },
]
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Unix",
]
dependencies = [
    "tqdm >= 4.62.3",
    "requests >= 2.25.1",
    "pytest"
]
requires-python = ">=3.7"

[project.urls]
"Source" = "https://github.com/Sai271828/iex-parser"
"Documentation" = "https://iex-parser.readthedocs.io/"