[metadata]
name = iex-parser
version = 0.0.5
author = Venkata Sai Narayana Bavisetty, Karthik Vasu
author_email = venkatasainarayana@gmail.com
description = Fast parser for IEX data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sai271828/iex-parser
project_urls =
    Bug Tracker = https://github.com/Sai271828/iex-parser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
include = iex_parser
